<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="VectorDrawableCompat">

    <android.support.v7.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/header_login"
        android:elevation="5dp" />

    <TextView

        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        android:text="@string/bienvenue_au_j_u_2019"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvVille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:elevation="5dp"
        android:text="@string/dschang_bandjoun_foumban"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:layout_alignLeft="@+id/tvVille"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        android:text="@string/jeu_en_ligne"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold"
        android:transitionName="tvLogin" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-80dp"
        android:layout_marginRight="-100dp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-100dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle" />

    <ImageView
        android:id="@+id/circle4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="-50dp"
        android:layout_marginBottom="-50dp"
        android:layout_toLeftOf="@+id/circle3"
        android:src="@drawable/circletransparant" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bgHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1"
            android:orientation="vertical"
            android:weightSum="2"
            tools:context=".Choix_Connexion">


            <Button

                android:id="@+id/btn_connexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_ui"
                android:text="@string/se_conneter"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_inscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_ui"
                android:text="@string/s_inscrire_normalement"
                android:textColor="@android:color/white" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ou_via" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/btn_multilangue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_ui"
                android:text="@string/changer_language"
                android:textColor="@android:color/white" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
