<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:alpha="0.2"
        android:background="@drawable/header_register"
        android:elevation="5dp"
        android:theme="@style/ToolbarTheme" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        android:text="@string/profil"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:transitionName="tvLogin" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:layout_marginLeft="-25dp"
        android:layout_marginTop="-5dp"
        android:src="@drawable/circletransparant" />

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:alpha="1"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/layout_background_profils"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="410dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/nom"
                    android:inputType="textPersonName"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />


                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/numero_de_telephone"
                    android:inputType="number"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_ville"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:drawableLeft="@drawable/ic_school_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/universite_de_provenance"
                    android:inputType="textAutoComplete"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edt_localiter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:drawableLeft="@drawable/ic_place_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/localiter"
                    android:inputType="textAutoComplete"
                    android:padding="20dp"
                    android:textColorHint="#606060"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <Button
                    android:id="@+id/profilSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_background_profils"
                    android:text="@string/mettre_jour"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>