<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangle_light"
    app:cardCornerRadius="8dp"
    app:contentPadding="5dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardUseCompatPadding="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:weightSum="2"
android:layout_marginTop="40dp"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context=".Inscription.Fragment_inscription.Inscription_two">




    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"></LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_date"
        android:hint="@string/numero"
        android:textSize="18sp"
        android:digits="1234567890"
        app:met_floatingLabel="highlight"
        android:gravity="center"
        android:inputType="number"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0"></LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_provenance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:hint="@string/universite_de_provenance"
        android:inputType="textAutoComplete"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@android:color/black"
        app:met_singleLineEllipsis="true" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0"></LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edt_localiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:hint="@string/localiter"
        android:inputType="textAutoComplete"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:met_baseColor="@android:color/black"
        app:met_floatingLabel="highlight"
        app:met_primaryColor="@android:color/black"
        app:met_singleLineEllipsis="true" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0"></LinearLayout>

    <Button
        android:id="@+id/btnTerminer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ui"
        android:text="@string/suivant"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />



</LinearLayout>
</android.support.v7.widget.CardView>