<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.widget.CardView

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/rectangle_light"
        app:cardCornerRadius="8dp"
        app:contentPadding="5dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardUseCompatPadding="true">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2.5"
            android:layout_marginTop="40dp"
            xmlns:fbutton="http://schemas.android.com/apk/res-auto"
            tools:context=".Inscription.Fragment_inscription.Inscription_one">

            <!-- TODO: Update blank fragment layout -->
            <LinearLayout
                android:layout_marginTop="100dp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"></LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:hint="@string/nom"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0"></LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:hint="@string/prenom"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0"></LinearLayout>

            <Spinner
                android:id="@+id/spsexe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0"></LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0"></LinearLayout>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textAutoComplete"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@android:color/black"
                app:met_singleLineEllipsis="true" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0"></LinearLayout>
            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:gravity="center"
                android:layout_margin="20dp"
                android:id="@+id/edt_passwd"
                android:hint="@string/mot_passe"
                app:tint_color="#A9d440"
                app:drawable_show="@drawable/ic_custom_show"
                app:drawable_hide="@drawable/ic_custom_hide"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"/>
            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:layout_margin="20dp"
                android:gravity="center"
                android:hint="@string/confirmationMP"
                app:tint_color="#A9d440"
                android:id="@+id/edt_conf_passwd"
                app:drawable_show="@drawable/ic_custom_show"
                app:drawable_hide="@drawable/ic_custom_hide"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"/>


            <!--<com.rengwuxian.materialedittext.MaterialEditText-->
            <!--android:id="@+id/edt_passwd"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:gravity="center"-->
            <!--android:hint="Mot de passe"-->
            <!--android:inputType="textAutoComplete"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textColorHint="@android:color/black"-->
            <!--app:met_baseColor="@android:color/black"-->
            <!--app:met_floatingLabel="highlight"-->
            <!--app:met_primaryColor="@android:color/black"-->
            <!--app:met_singleLineEllipsis="true" />-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0"></LinearLayout>

            <!--<com.rengwuxian.materialedittext.MaterialEditText-->
            <!--android:id="@+id/edt_conf_passwd"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:gravity="center"-->
            <!--android:hint="Confirmation"-->
            <!--android:inputType="textAutoComplete"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textColorHint="@android:color/black"-->
            <!--app:met_baseColor="@android:color/black"-->
            <!--app:met_floatingLabel="highlight"-->
            <!--app:met_primaryColor="@android:color/black"-->
            <!--app:met_singleLineEllipsis="true" />-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.3"></LinearLayout>

            <Button
                android:id="@+id/btnSuivant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ui"
                android:text="@string/suivant"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>
